# Mathemix

./: .gitignore  Cargo.toml  PHASE4_5_COMPLETE.md  PHASE4_5_PROGRESS.md  PHASE7_NEXT_STEPS.md  README.md  ROADMAP.md  app.py  featurelist.txt  pyproject.toml  requirements.txt  run_desktop.py  run_mathemixx.bat  stats_utils.py  test_bindings.py  test_gui.py  test_output.csv  test_output.tex  test_phase4_phase5.py  verify_test_data.py
bindings/: Cargo.toml
bindings/src/: lib.rs
core/: Cargo.toml
core/src/: dataframe.rs  errors.rs  hypothesis.rs  lib.rs  manipulation.rs  ols.rs  statistics.rs  summary.rs  visualization.rs
core/src/timeseries/: arima.rs  autocorr.rs  cointegration.rs  decomposition.rs  forecasting.rs  garch.rs  granger.rs  mod.rs  operations.rs  stationarity.rs  structures.rs  var.rs
core/tests/: ols_tests.rs  timeseries_tests.rs
data/: auto.csv  example.csv  sample_regression.csv
desktop_docs/: DESKTOP_UI_CHANGELOG.md  DESKTOP_UI_GUIDE.md  PHASE6_UI_INTEGRATION_COMPLETE.md  PHASE7_IMPLEMENTATION_STATUS.md  PHASE7_TIMESERIES_GUIDE.md  QUICKSTART.md  UI_VISUAL_GUIDE.md
docs/: PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE7_PLAN.md  README_DESKTOP.md
python/: plots.py  timeseries.py
python/mathemixx_core/: __init__.py
python/mathemixx_desktop/: __init__.py  app.py  error_handler.py  timeseries_widget.py
python/tests/: test_ols.py
test-data/: ERROR_HANDLING_SUMMARY.md  FILES_CREATED.md  QUICK_REFERENCE.md  README.md  USAGE_GUIDE.md  comprehensive_timeseries.csv  plots_correlation.csv  plots_distributions.csv  regression_housing.csv  regression_multiple.csv  regression_simple.csv  timeseries_daily_temperature.csv  timeseries_monthly_sales.csv  timeseries_quarterly_revenue.csv  timeseries_stock_prices.csv  timeseries_website_traffic.csv
tests/: test_comprehensive_timeseries.py  test_error_handling.py  test_integration.py  test_phase6_visualization.py  test_phase7_bindings.py  test_phase7_timeseries.py
(+2 files in other folders)
