[package]
name = "mathemixx-bindings"
version = "0.1.0"
edition = "2021"
authors = ["MatheMixX Developers"]
description = "PyO3 bindings for the MatheMixX core engine"
license = "MIT"

[lib]
name = "mathemixx_core"
crate-type = ["cdylib"]

[dependencies]
mathemixx-core = { path = "../core" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
polars = { version = "0.44", default-features = false, features = ["csv", "json", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
pyo3-build-config = "0.21"
