[package]
name = "mathemixx-core"
version = "0.1.0"
edition = "2021"
authors = ["MatheMixX Developers"]
description = "High-performance statistical routines for MatheMixX"
license = "MIT"

[dependencies]
polars = { version = "0.44", features = ["lazy", "ndarray", "dtype-categorical", "csv", "parquet", "ipc", "strings", "fmt"] }
ndarray = { version = "0.15", features = ["blas"] }
ndarray-linalg = { version = "0.16", default-features = false, features = ["intel-mkl-static"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rayon = "1"
statrs = "0.17"
log = "0.4"

[dev-dependencies]
approx = "0.5"
chrono = "0.4"
